@@ -2,6 +2,9 @@ nx-libs (2:3.5.0.11-0) UNRELEASED; urgency=low
 
   * Use ,,$(MAKE) -C'' in main Makefile for calling Makefiles in subdirectories,
     make build stanza work for nx-libs-full and nx-libs-lite.
+  * Do not install libXinerama directly into /usr/lib/nx. Recommended method is
+    installing to /usr/lib/nx/Xinerama, so that you can enable/disable usage of
+    the Xinerama extension.
 
  -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Tue, 07 Feb 2012 13:48:19 +0100
 
